# walle

./: .gitignore  README.md  pyproject.toml
tests/: test_file_creator.py  test_int32_file_creator.py  test_int32_int64_compression.py  test_prime_file_creator.py  test_walle.py
walle/: file_creator.py  int32_file_creator.py  prime_file_creator.py
